--- a/cda/templates/cda/mi_reporte_pdf.html
+++ b/cda/templates/cda/mi_reporte_pdf.html
@@ -32,7 +32,7 @@
     <p>Fecha de generación: {{ now|date:"d/m/Y h:i A" }}</p>
 
     <div class="footer">
-        <p>© CVT - Control Técnico Vehicular | Reporte generado automáticamente</p>
+        <p>© CTV - Control Técnico Vehicular | Reporte generado automáticamente</p>
     </div>
 </body>
 </html>
