--- a/cda/templates/cda/base.html
+++ b/cda/templates/cda/base.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Sistema CTV - Control Técnico Vehicular">
     <title>{% block title %}CTV {% endblock %}</title>
 
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚗</text></svg>">
+
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
