Actualizacion y mejoras en los comentarios para mejor comprecion del codigo y mejor mantenimineto y escalabilidad

--- a/cda/templates/cda/agregar_fotos.html
+++ b/cda/templates/cda/agregar_fotos.html
@@ -474,7 +474,7 @@
     pointer-events: none;
     opacity: 1; /* Siempre visible */
     visibility: visible; /* Siempre visible */
-    pointer-events: auto; /* Línea nueva */
+    pointer-events: auto; /* Permitir clics en los botones */
     z-index: 30; /* Línea nueva - aumentar */
 }
 
